# oxigraph-wikibase

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
