[package]
name = "oxigraph_wikibase"
version = "0.3.0-dev"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oxigraph/oxigraph-wikibase"
description = """
Oxigraph SPARQL server for Wikibase
"""
edition = "2021"

[dependencies]
clap = "2"
async-std = { version = "1", features = ["attributes"] }
async-h1 = "2"
chrono = "0.4"
http-client = { version = "6", features = ["h1_client"] }
http-types = "2"
oxigraph = { version = "0.3.0-dev", git = "https://github.com/oxigraph/oxigraph", branch = "master", features = ["http_client"] }
oxhttp = { version = "0.1", features = ["native-tls"] }
serde_json = "1"
url = "2"
